creo tipo cheque y genero un arrerglo de cheques

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     </div>
     <div>
       <p>RESULTADOS</p>
-      <span>MONTO TOTAL EN CHEQUES $: </span>
+      <pre class="resultados">MONTO TOTAL EN CHEQUES:     </pre><span id="TOTALBRUTO"></span>
       <p></p>
-      <span>DIFERENCIA PROMEDIO en %: </span><span id="DIFPORCENT"></span>
+      <pre class="resultados">TASA PROMEDIO:              </pre><span id="DIFPORCENT"></span>
       <p></p>
-      <span>DIFERENCIA en $: </span><span id="DIFPESOS"></span>
+      <pre class="resultados">DIFERENCIA (Profit):        </pre><span id="DIFPESOS"></span>
       <p></p>
-      <span>DINERO TOTAL A PAGAR: </span><span id="TOTALPAGAR"></span>
+      <pre class="resultados">DINERO TOTAL A PAGAR:       </pre><span id="TOTALPAGAR"></span>
     </div>
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
 </body>
 </html>
