agregando mejoras visuales y comenzando consulta cheques

--- a/consulta.html
+++ b/consulta.html
@@ -7,18 +7,20 @@
 </head>
 <body>
     <div id="datosCheque">
-     <h3>DATOS CHEQUE</p>    
-     <p></p>
-     <input type="number" id="cuit" placeholder="CUIT">
-     <p></p>
+     <h3>CONSULTA PERSONA O EMPRESA</p>    
+     <input type="number" id="Cuit" placeholder="CUIT">
+     <p>-------------------------------------------------------------------------</p>
+     <p>CONSULTA CHEQUE DENUNCIADO</p>
      <input type="number" id="nroCheque" placeholder="Nro Cheque">
      <p></p>
      <select name="" id="entidadBancaria"></select>
-     <p>-----------------------------------------------------------------------------------</p>
+     <p>-------------------------------------------------------------------------</p>
     </div>
+    <div class="BOTON"> 
+        <button id="consultar">CONSULTAR</button>
+    </div> 
 
 
-
-   <script src="consulta.js"></script> 
+   <script src="consulta2.js"></script> 
 </body>
 </html>
