Canje Valores V1.0 - Herramientas FINANCIERAS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
       <input type="number" class="cheque" placeholder="$ 0,00">
       <input type="date"  class="fecha" placeholder="DD/MM/AA"><span id="datos4"></span>
       <p></p>    
+      <input type="number" class="cheque" placeholder="$ 0,00">
+      <input type="date"  class="fecha" placeholder="DD/MM/AA"><span id="datos5"></span>
+      <p></p>    
+      <input type="number" class="cheque" placeholder="$ 0,00">
+      <input type="date"  class="fecha" placeholder="DD/MM/AA"><span id="datos6"></span>
+      <p></p>    
+      <input type="number" class="cheque" placeholder="$ 0,00">
+      <input type="date"  class="fecha" placeholder="DD/MM/AA"><span id="datos7"></span>
+      <p></p>    
+      <input type="number" class="cheque" placeholder="$ 0,00">
+      <input type="date"  class="fecha" placeholder="DD/MM/AA"><span id="datos8"></span>
+      <p></p>    
+      <input type="number" class="cheque" placeholder="$ 0,00">
+      <input type="date"  class="fecha" placeholder="DD/MM/AA"><span id="datos9"></span>
+      <p></p>    
       <div class="BOTON"> 
         <button id="calcular">CALCULAR</button>
       </div> 
@@ -54,5 +69,8 @@
       <pre class="resultados">DINERO TOTAL A PAGAR:       </pre><span id="TOTALPAGAR"></span>
     </div>
     <script src="index2.js"></script>
+    <footer>
+      <pre> Diseñado, pensado y construido por: Cristian Falcone                  Noviembre 2024</pre>
+    </footer>
 </body>
 </html>
